--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <h2>Products</h2>
-<div *ngFor="let px of products">
+<div *ngFor="let px of produ">
  <h3> 
    <a [title]="px.name + ' details ' ">
      {{px.name}}
